SERVER-14838: Fix shutdown failures

1. On Solaris, we race between the main thread, and signal thread. The
main thread wins, and returns EXIT_NET_ERROR. Previously, we use to work around
this by just sleeping on the main thread.

2. If we exit early due to missing db path, OperationContext asserts
because the storage engine has not been started yet.